re PR middle-end/30286 (Segfault with -O2 -ftrapv)

PR middle-end/30286
	* fold-const.c (negate_expr): Don't call fold_build1
	for INTEGER_CST or REAL_CST.

	* gcc.dg/pr30286.c: New test.

From-SVN: r120393